ps-datacloud/main/default/objects/ssot__PatientHealthCondition__dlm/fields/Health_Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_Condition_Name__c</fullName>
    <label>Health Condition Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Health Condition Name</labelOverride>
        <masterLabel>Health Condition Name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>