ps-datacloud/main/default/objects/ssot__PatientHealthCondition__dlm/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <label>Problem Description</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Problem Description</labelOverride>
        <masterLabel>Problem Description</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>