ps-datacloud/main/default/objects/ssot__PatientHealthCondition__dlm/fields/rel_1773148469343_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1773148469343_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_PatientHealthCondition_Individu_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ssot_PatientHealthCondition_Individu_rel</relationshipLabel>
    <relationshipName>rel_1773148469343_end</relationshipName>
    <type>Lookup</type>
</CustomField>